ingress/test-ingr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingr-main
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-dep-main
            port:
              number: 8080
      - path: /canary
        pathType: Prefix
        backend:
          service:
            name: svc-dep-canary
            port:
              number: 9090
